--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@faker-js/faker": "^10.1.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
     "@next/eslint-plugin-next": "^16.0.1",
@@ -31,6 +32,7 @@
     "@types/node": "20.19.9",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/supertest": "^6.0.3",
     "autoprefixer": "10.4.13",
     "babel-jest": "^30.0.2",
     "cypress": "^15.8.0",
@@ -50,6 +52,7 @@
     "postcss": "8.4.38",
     "prettier": "~3.6.2",
     "prisma": "^6.19.1",
+    "supertest": "^7.1.4",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
@@ -64,6 +67,8 @@
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "^6.19.1",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "next": "~16.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
