--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-# Environment variables declared in this file are NOT automatically loaded by Prisma.
-# Please add `import "dotenv/config";` to your `prisma.config.ts` file, or use the Prisma CLI with Bun
-# to load environment variables from .env files: https://pris.ly/prisma-config-env-vars.
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/atlas_eor?schema=public"
+DATABASE_URL_TEST="postgresql://postgres:postgres@localhost:5433/atlas_eor_test?schema=public"
+PORT=3333
+NODE_ENV=development
+CORS_ORIGIN=http://localhost:3000
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-in-production-min-32-chars
+JWT_EXPIRES_IN=7d
